Fix: Resolve Hardhat dependency issues and update frontend for deployed contracts

--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "nft-micro-lending-prototype-1",
+  "name": "nft-micro-lending-prototype",
   "version": "1.0.0",
+  "description": "NFT Micro-Lending Protocol for Gig Workers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^5.4.0",
-    "ethers": "^5.8.0",
-    "hardhat": "^2.26.1"
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/contracts-upgradeable": "^4.9.6",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
+    "chai": "^4.3.10",
+    "dotenv": "^16.3.1",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.19.0"
   }
 }
