--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx hardhat test"
   },
   "devDependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.9.6",
@@ -16,6 +17,7 @@
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
-    "hardhat": "^2.19.0"
+    "hardhat": "^2.19.0",
+    "hardhat-gas-reporter": "^2.3.0"
   }
 }
